# DeployDeUmaAPIFlaskDIOBank

./: LEIAME.TXT  README.md  pyproject.toml  requirements.txt
migrations/versions/: 2e27182e4b44_initial_migration.py  4d66715c0838_initial_migration.py  dae5e351d58b_add_password_field.py
src/: app.py  config.py  db.py  wsgi.py
src/controllers/: auth.py  db.py  post.py  role.py  user.py
src/log/: LEIAME.TXT
src/models/: __init__.py  base.py  post.py  role.py  user.py
src/utils/: utils.py
src/views/: role.py  user.py
tests/integrations/: conftest.py
tests/integrations/controllers/: test_user.py
tests/unit/: test_functions_eleva_quadrado.py  test_utils_functions_requires_role_name.py
